--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+fastapi[all]
 uvicorn[standard]
 sqlalchemy[asyncio]
 asyncpg 
 psycopg2-binary
+pydantic
+pydantic-settings
+python-jose[cryptography]
+passlib[bcrypt]
+strawberry-graphql[fastapi]
